<resources>
    <string name="app_name">Біла Церква туристична</string>
    <string name="title_activity_maps">Map</string>
    <string name="button">Button</string>
    <string name="buttonToAbout">Про Білу Церкву</string>
    <string name="buttonWhatToSee">Варто побачити</string>
    <string name="buttonWhereToStop">Де зупинитись</string>
    <string name="buttonWhereToEat">Де поїсти</string>
    <string name="buttonToTouristMap">Карта туриста</string>
    <string name="title_activity_about_bcerkva">AboutBCerkvaActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_what_to_see">WhatToSeeActivity</string>
    <string name="title_activity_where_to_stop">WhereToStopActivity</string>
    <string name="title_activity_where_to_eat">WhereToEatActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_detail_info">DetailInfoActivity</string>
    <string name="title_activity_detailed_maps">Map</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Далі</string>
    <string name="skip">Пропустити</string>
    <string name="start">ЗРОЗУМІЛО</string>

    <string name="slide_1_title">Ласкаво просимо до Білої Церкви!</string>
    <string name="slide_1_desc">Ваш персональний гід по місту!</string>

    <string name="slide_2_title">Варто побачити</string>
    <string name="slide_2_desc">Найкращий розділ, щоб закохатись у місто!</string>

    <string name="slide_3_title">Де поїсти та переночувати</string>
    <string name="slide_3_desc">Рекомендовані заклади!</string>

    <string name="slide_4_title">Мапа міста</string>
    <string name="slide_4_desc">Допоможе спланувати ваш відпочинок!</string>
    <string name="textView5">Біла Церква — місто в Україні, значний економічний, культурний та освітній центр Київщини, розташований за 80 км на південь від Києва на річці Рось.

Вперше назва «Біла Церква» згадується в Іпатіївському літописі 1155 року. У літописі говориться, що місто лежало в центральній частині Поросся. Через нього проходили торговельні шляхи на Київ, Вінницю, в Арабські країни, Індію, Угорщину.

Дендропарк «Олександрія» — видатна пам\'ятка садово-паркового мистецтва України, яка розташована в Білій Церкві, на лівому березі річки Росі, площа 297 га. Заснований наприкінці XVIII ст., як заміська резиденція польських графів Браницьких. Автором генерального проекту парку став відомий французький архітектор-паркобудівник Мюффо. Пізніше в парку працювали відомі майстри садово-паркового мистецтва Д.Ботані, А.Єнц, А.Станге, Р.Чех та інші. На території парку поєднуються природні пейзажі з численними архітектурними спорудами — альтанками, павільйонами, колонадами, містками, фонтанами з романтичними назвами (водоспад Руїни, Турецький будиночок, Китайський місток, Колона смутку, колонада «Луна» та інші). У колекції заповідного парку зібрано понад 2130 видів рослинного світу.  </string>
    <string name="textView4">Про Білу Церкву</string>


</resources>
