<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".mvp.view.main.MainActivity">

    <ImageView
        android:id="@+id/whitechurchimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonToAbout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/buttonToAbout"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonWhatToSee"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/buttonWhatToSee"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonWhereToStop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/buttonWhereToStop"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonWhereToEat"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/buttonWhereToEat"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonToTouristMap"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/buttonToTouristMap"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />


</android.widget.LinearLayout>
